# smartestai

./: README.md  com.datapeice.smartestai.json  meson.build
data/: com.datapeice.smartestai.desktop.in  com.datapeice.smartestai.gschema.xml  com.datapeice.smartestai.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  smartestai.gresource.xml  window.ui  window.vala
